--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mern",
   "version": "1.0.0",
-  "description": "Grooming Site",
+  "description": "NYTNodeSearch",
   "main": "server.js",
   "scripts": {
     "server": "node server.js",
@@ -22,6 +22,10 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "express": "^4.15.4"
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.2.6"
   }
 }
